# learn-programming-app

./: .env.example  .gitattributes  .gitignore  AI_ASSISTANT_README.md  AI_INSTRUCTIONS.md  CICD_PLAN.md  CLAUDE.md  Cargo.toml  IMPLEMENTATION.md  INSTALLATION.md  LICENSE  PKGBUILD  PLAYGROUND_FEATURE.md  PoC.md  QUICKSTART.md  README.md  RELEASES.md  RELEASE_CHECKLIST.md  REMOVALS.md  SHARED_DATABASE_IMPLEMENTATION.md  WORKFLOWS_SUMMARY.md  components.d.ts  forge.config.cts  index.html  install.sh  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.main.config.ts  vite.preload.config.ts  vite.renderer.config.ts
.claude/: settings.local.json
.github/workflows/: ci.yml  nightly.yml  release.yml
example-course/: .gitignore  course.json
example-course/exercises/001-basics+/: README.md
example-course/exercises/001-hello-world/: 001-hello-world.js  exercise.json
example-course/exercises/002-advanced+/: README.md
example-js-course/: course.json  package.json
example-js-course/exercises/01-hello-world/: README.md  exercise.js  exercise.test.js
prisma/: db.sqlite  db.sqlite-journal  schema.prisma
scripts/macos/: build-pkg.sh  postinstall
src/: App.tsx  App.vue  app.html  config.rs  course.rs  database.rs  editor.rs  electron-store.ts  git.rs  main.rs  main.ts  playground.rs  preload.ts  renderer.ts  renderer.tsx  routes.ts  styles.css  test_runner.rs  ui.rs  watcher.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 001_init.sql
src-tauri/src/: lib.rs  main.rs
src/components/: AIAssistant.tsx  AIMarkdownComponents.tsx  AIResponse.tsx  BackButton.tsx  CodeEditor.tsx  CodeFiles.tsx  Counter.tsx  EditorBottomBar.tsx  MainLayoutLink.vue  MainSidebar.vue  NavigationBar.tsx  OllamaGuard.tsx  OllamaSettingsModal.tsx  ThemeInitializer.tsx  TopicAIAssistant.tsx  TopicItem.tsx
src/db/: progress.ts
src/i18n/: i18n.ts
src/ipc/: bridge.ts  contracts.ts  main-handlers.ts  register-handlers.ts  rregister-handlers.ts
src/layouts/: MainLayout.vue
src/lib/: firebaseClient.ts  supabaseClient.ts  types.ts  utils.ts
src/pages/: links.ts
src/renderer/: App.vue  AppConfig.type.ts  i18n.ts  routes.ts  styles.css
src/routes/: +page.svelte
src/services/: appwrite.ts  auth.ts
src/store/: hooks.ts  index.ts
src/stores/: appearance.ts  auth.ts  index.ts
src/types/: electron-api.d.ts  env.d.ts  shared.types.ts
src/views/: CourseView.vue  CoursesView.vue  SettingsView.vue
wix/: main.wxs
(+88 files in other folders)
