[package]
name = "learnp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "learnp"
path = "src/main.rs"

[dependencies]
ratatui = "0.28"
crossterm = { version = "0.28", features = ["event-stream"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
anyhow = "1.0"
directories = "5.0"
chrono = "0.4"
